--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,10 +52,9 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Btn_Option.cs" />
+     <Compile Include="Assets\Btn_ReturnHome.cs" />
      <Compile Include="Assets\Btn_Start.cs" />
      <Compile Include="Assets\Scripts\inGame\Background_scroll.cs" />
-     <Compile Include="Assets\Scripts\inGame\Btn_Quit.cs" />
-     <Compile Include="Assets\Scripts\inGame\Btn_Setting.cs" />
      <Compile Include="Assets\Scripts\inGame\Bullet.cs" />
      <Compile Include="Assets\Scripts\inGame\CameraFollow.cs" />
      <Compile Include="Assets\Scripts\inGame\Enemy.cs" />
@@ -67,6 +66,9 @@
      <Compile Include="Assets\Scripts\inGame\PlayerHit.cs" />
      <Compile Include="Assets\Scripts\inGame\PlayerManager.cs" />
      <Compile Include="Assets\Scripts\inGame\PlayerShoot.cs" />
+     <Compile Include="Assets\Scripts\UI\Btn_Quit.cs" />
+     <Compile Include="Assets\Scripts\UI\Btn_Setting.cs" />
+     <Compile Include="Assets\toggle_spriteChange.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
