--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
      <Compile Include="Assets\Scripts\inGame\PlayerShoot.cs" />
      <Compile Include="Assets\Scripts\UI\Btn_Quit.cs" />
      <Compile Include="Assets\Scripts\UI\Btn_Setting.cs" />
+     <Compile Include="Assets\Scripts\UI\SettingManager.cs" />
      <Compile Include="Assets\toggle_spriteChange.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
